--- a/src/css_modules/mainContainer.module.css
+++ b/src/css_modules/mainContainer.module.css
@@ -7,6 +7,6 @@
   left: 10%;
   width: 80%;
   border-radius: 20px;
-  box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.3);
+  box-shadow: 0px 0px 12em rgba(255, 255, 255, 0.3);
   padding: 1%;
 }
