--- a/src/css_modules/mainContainer.module.css
+++ b/src/css_modules/mainContainer.module.css
@@ -1,12 +1,4 @@
 .container {
-  margin: 0 auto;
-  position: absolute;
-  height: 60%;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 10%;
-  width: 80%;
-  border-radius: 20px;
-  box-shadow: 0px 0px 12em rgba(255, 255, 255, 0.3);
-  padding: 1%;
+  position: relative;
+  height: calc(100vh - 12rem);
 }
