--- a/src/css_modules/form.module.css
+++ b/src/css_modules/form.module.css
@@ -12,6 +12,9 @@
   outline: 0;
   padding: 1%;
   margin-right: 2%;
+  background-color: var(--bg-color);
+  color: var(--text-color);
+  border-bottom: 1px solid var(--highlight-color);
 }
 
 .formContainer > button {
@@ -19,4 +22,6 @@
   padding: 1%;
   border: 0;
   outline: 0;
+  background-color: var(--highlight-color);
+  color: var(--text-color);
 }
