--- a/src/css_modules/global.css
+++ b/src/css_modules/global.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200;300;400;500;600;700;800&display=swap");
+:root {
+  --bg-color: #1b1818;
+  --text-color: #f5f5f5;
+  --highlight-color: #f15025;
+}
+
 * {
   margin: 0;
   padding: 0;
