--- a/src/css_modules/mainContainer.module.css
+++ b/src/css_modules/mainContainer.module.css
@@ -1,15 +1,14 @@
 .container {
+  width: 80%;
   position: absolute;
-  height: calc(60% - 12rem);
+  min-height: calc(50% - 12rem);
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
   column-gap: 1px;
-  top: 60%;
+  top: 50%;
   transform: translateY(-50%);
   left: 10%;
-  width: 80%;
   border-radius: 20px;
   box-shadow: 0px 0px 12em rgba(255, 255, 255, 0.3);
-  padding: 1%;
 }
-
