--- a/src/css_modules/tempContainer.module.css
+++ b/src/css_modules/tempContainer.module.css
@@ -1,19 +1,22 @@
 .container {
-  padding: 1em;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  padding: 12px 0;
 }
 .container > * {
   font-family: "Times New Roman", Times, serif;
 }
 .container > h2 {
-  font-size: 5vw;
+  width: 100%;
+  font-size: 4vw;
   font-weight: 900;
   text-align: center;
 }
 p {
+  font-size: 1.25em;
   text-align: center;
+  letter-spacing: .1rem;
+  width: 100%;
 }
