--- a/src/css_modules/mainContainer.module.css
+++ b/src/css_modules/mainContainer.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 80%;
+  width: 60%;
   position: absolute;
   min-height: calc(50% - 12rem);
   display: grid;
@@ -7,8 +7,8 @@
   align-items: center;
   column-gap: 1px;
   top: 50%;
-  transform: translateY(-50%);
-  left: 10%;
+  left: 50%;
+  transform: translate(-50%,-50%);
   border-radius: 20px;
   box-shadow: 0px 0px 12em rgba(255, 255, 255, 0.3);
 }
