--- a/src/css_modules/tempContainer.module.css
+++ b/src/css_modules/tempContainer.module.css
@@ -12,7 +12,7 @@
 }
 .container > h2 {
   width: 100%;
-  font-size: 4vw;
+  font-size: 3.45em;
   font-weight: 900;
   text-align: center;
   background: linear-gradient(
